--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "civicsense",
   "version": "1.0.0",
-  "description": "Blockchain-backed civic issue reporting platform",
+  "description": "Civic issue reporting platform",
   "main": "index.js",
   "scripts": {
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server": "cd server && npm run dev",
     "client": "cd client && npm start",
-    "install-all": "npm install && cd server && npm install && cd ../client && npm install && cd ../smart-contract && npm install"
+    "install-all": "npm install && cd server && npm install && cd ../client && npm install"
   },
-  "keywords": ["blockchain", "civic", "governance"],
+  "keywords": ["civic", "governance"],
   "author": "",
   "license": "MIT",
   "devDependencies": {
