--- a/server/.env.example
+++ b/server/.env.example
@@ -1,7 +1,26 @@
 PORT=5000
+CLIENT_URL=http://localhost:3000
 MONGODB_URI=mongodb://localhost:27017/civicsense
 JWT_SECRET=your_jwt_secret_key_here_change_in_production
-POLYGON_RPC_URL=https://rpc-mumbai.maticvigil.com
-CONTRACT_ADDRESS=your_deployed_contract_address
-PRIVATE_KEY=your_wallet_private_key_for_admin_operations
+
+# For deployment, you can provide multiple allowed front-end origins (comma-separated)
+# CLIENT_URL=https://your-netlify-site.netlify.app,https://your-custom-domain.com
+# Optional: set this to bootstrap an admin user (when that email registers)
+ADMIN_EMAIL=
+
 NODE_ENV=development
+
+# Optional: for AI routes if used
+# GEMINI_API_KEY=
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_SECURE=false
+SMTP_USER=
+SMTP_PASS=
+SMTP_FROM=
+
+TWILIO_ACCOUNT_SID=
+TWILIO_AUTH_TOKEN=
+TWILIO_SMS_FROM=
+TWILIO_WHATSAPP_FROM=
