--- a/server/package.json
+++ b/server/package.json
@@ -13,14 +13,14 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongodb-memory-server": "^11.0.1",
     "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.8",
+    "twilio": "^4.23.0",
     "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
